style.css
/* body {
    display: flex;
    flex-wrap: wrap;
} */

.center-box {
    width: 100%;
    min-height: 250px;
    background-color: #180580;
    display: flex;
    align-items: center;
    justify-content: center;
}
.center-item {
    width: 75px;
    height: 75px;
    background-color: #F9E3B5;
}



.nav {
    width: 100%;
    height: 100px;
    background-color: #6495ED;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo-header {
    display: flex;
    margin-left: 20px;
}

.nav img {
    width: 50px;
    height: 50px;
}

.nav h1 {
    color: white;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.5em;
}

.nav ul {
    list-style-type: none;
}

.nav li {
    display: inline;
}
.nav li a:link {
    text-decoration: none;
    color: white;
    font-family: 'Montserrat', sans-serif;
}
.nav li a:visited {
    text-decoration: none;
    color: white;
}

